--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <!-- header title -->
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+
+    <!-- hero/jumbotron -->
+    <main class="flex-row justify-space-between">
+    <div class="col-12 col-md-4">
+        <div class="card">
+          <h3 class="card-header text-uppercase">Search for a City:</h3>
+          <form id="search-form" class="card-body">
+            <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+            <button type="submit" class="btn">Search</button>
+          </form>
+        </div>
+    </main>
+    <script src="./assets/js/fetchGet.js"></script>
 </body>
 </html>
